--- a/ZhongWenKaraoke/Base.lproj/Main.storyboard
+++ b/ZhongWenKaraoke/Base.lproj/Main.storyboard
@@ -82,7 +82,7 @@
                                             <outlet property="artistName" destination="gYw-Zv-e07" id="seZ-K2-fHz"/>
                                             <outlet property="posterImg" destination="K32-D6-VSz" id="FJ5-7u-dxy"/>
                                             <outlet property="songTitle" destination="8AN-5X-QLW" id="DPo-gK-3Ox"/>
-                                            <segue destination="1bP-cQ-iyw" kind="show" identifier="SegueToSongView" id="tPa-MV-3tt"/>
+                                            <segue destination="1bP-cQ-iyw" kind="showDetail" identifier="SegueToSongView" action="showViewController:sender:" id="tPa-MV-3tt"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
@@ -96,14 +96,20 @@
                             <constraint firstItem="35k-OG-P21" firstAttribute="bottom" secondItem="wfy-db-euE" secondAttribute="top" id="qYk-UQ-UQa"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" id="yGO-wX-xjQ"/>
+                    <navigationItem key="navigationItem" id="yGO-wX-xjQ">
+                        <barButtonItem key="rightBarButtonItem" title="Now Playing" id="kH8-Em-xpr">
+                            <connections>
+                                <segue destination="1bP-cQ-iyw" kind="show" id="Uk5-Uf-bq1"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
                         <outlet property="songsTable" destination="35k-OG-P21" id="iDl-pk-Xy1"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="972" y="37.331334332833585"/>
+            <point key="canvasLocation" x="1049" y="-891"/>
         </scene>
         <!--Song-->
         <scene sceneID="kVf-va-RWe">
@@ -118,7 +124,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="xFS-Qz-4NL">
-                                <rect key="frame" x="37" y="64" width="301" height="243"/>
+                                <rect key="frame" x="37" y="20" width="301" height="287"/>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Jeq-8j-PdA">
                                 <rect key="frame" x="37" y="315" width="301" height="29"/>
@@ -132,13 +138,6 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <containerView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ECd-H9-1aW">
-                                <rect key="frame" x="0.0" y="505" width="375" height="118"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
-                                <connections>
-                                    <segue destination="xcY-D2-U5H" kind="embed" identifier="SegueToJukebox" id="NqU-ii-ftA"/>
-                                </connections>
-                            </containerView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
@@ -170,7 +169,7 @@
         <!--Navigation Controller-->
         <scene sceneID="DwB-I9-pFr">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" hidesBarsOnSwipe="YES" id="dUq-FF-21i" sceneMemberID="viewController">
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="dUq-FF-21i" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="wlB-Xn-iw4">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
@@ -207,7 +206,7 @@
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="MiguCategoryCell" id="pv0-fm-LWr" customClass="MiguCategoryCell" customModule="ZhongWenKaraoke" customModuleProvider="target">
+                                    <collectionViewCell opaque="NO" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="MiguCategoryCell" id="pv0-fm-LWr" customClass="MiguCategoryCell" customModule="ZhongWenKaraoke" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="50" width="132" height="133"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
@@ -293,7 +292,13 @@
                             <constraint firstItem="GiV-ce-sPf" firstAttribute="leading" secondItem="lBK-Uu-vOu" secondAttribute="leading" id="eJv-nn-HQz"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" id="CZ8-dh-dKI"/>
+                    <navigationItem key="navigationItem" id="CZ8-dh-dKI">
+                        <barButtonItem key="rightBarButtonItem" title="Now Playing" id="Xp8-UK-XdR">
+                            <connections>
+                                <segue destination="1bP-cQ-iyw" kind="show" id="oJY-Rt-v3v"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
                         <outlet property="categoriesView" destination="GiV-ce-sPf" id="bG6-Qg-KRu"/>
                     </connections>
@@ -434,7 +439,7 @@
                         <viewControllerLayoutGuide type="bottom" id="nGO-Lf-GVL"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="PNc-iD-rq5">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="118"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="3oZ-ni-0El" userLabel="jukeboxPlayer">
@@ -499,7 +504,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="f6E-HL-jua" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2260" y="622.48875562218893"/>
+            <point key="canvasLocation" x="2182" y="764"/>
         </scene>
     </scenes>
     <resources>
@@ -509,4 +514,7 @@
         <image name="restartBtn" width="128" height="128"/>
         <image name="stopBtn" width="128" height="128"/>
     </resources>
+    <inferredMetricsTieBreakers>
+        <segue reference="oJY-Rt-v3v"/>
+    </inferredMetricsTieBreakers>
 </document>
