--- a/ZhongWenKaraoke/Base.lproj/Main.storyboard
+++ b/ZhongWenKaraoke/Base.lproj/Main.storyboard
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13173"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -39,36 +40,36 @@
                                             <rect key="frame" x="0.0" y="0.0" width="330" height="109"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="K32-D6-VSz">
-                                                    <rect key="frame" x="0.0" y="0.0" width="100" height="109"/>
-                                                    <constraints>
-                                                        <constraint firstAttribute="width" constant="100" id="raA-BS-jzB"/>
-                                                    </constraints>
-                                                </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gYw-Zv-e07">
-                                                    <rect key="frame" x="110" y="88" width="220" height="16"/>
+                                                    <rect key="frame" x="119" y="88" width="211" height="16"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8AN-5X-QLW">
-                                                    <rect key="frame" x="110" y="5" width="220" height="21"/>
+                                                    <rect key="frame" x="119" y="5" width="211" height="21"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="K32-D6-VSz">
+                                                    <rect key="frame" x="0.0" y="0.0" width="109" height="109"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" secondItem="K32-D6-VSz" secondAttribute="height" multiplier="1:1" id="rrM-HF-yJ1"/>
+                                                    </constraints>
+                                                </imageView>
                                             </subviews>
                                         </view>
                                         <constraints>
-                                            <constraint firstItem="K32-D6-VSz" firstAttribute="leading" secondItem="HeU-vL-Boz" secondAttribute="leading" id="5mv-VS-beV"/>
-                                            <constraint firstItem="K32-D6-VSz" firstAttribute="top" secondItem="HeU-vL-Boz" secondAttribute="topMargin" id="K4g-4M-Xev"/>
-                                            <constraint firstAttribute="bottomMargin" secondItem="K32-D6-VSz" secondAttribute="bottom" id="Nhf-gT-B3Q"/>
+                                            <constraint firstItem="K32-D6-VSz" firstAttribute="leading" secondItem="HeU-vL-Boz" secondAttribute="leading" id="DEh-RG-JvU"/>
                                             <constraint firstItem="8AN-5X-QLW" firstAttribute="top" secondItem="HeU-vL-Boz" secondAttribute="topMargin" constant="5" id="PKg-jU-7g6"/>
+                                            <constraint firstItem="K32-D6-VSz" firstAttribute="bottom" secondItem="HeU-vL-Boz" secondAttribute="bottom" id="RaB-aU-5UH"/>
                                             <constraint firstItem="8AN-5X-QLW" firstAttribute="leading" secondItem="K32-D6-VSz" secondAttribute="trailing" constant="10" id="Ut5-1s-9Vm"/>
-                                            <constraint firstAttribute="bottomMargin" secondItem="gYw-Zv-e07" secondAttribute="bottom" constant="5" id="fcW-I3-CHq"/>
+                                            <constraint firstItem="gYw-Zv-e07" firstAttribute="bottom" secondItem="HeU-vL-Boz" secondAttribute="bottomMargin" constant="-5" id="fcW-I3-CHq"/>
                                             <constraint firstItem="gYw-Zv-e07" firstAttribute="leading" secondItem="K32-D6-VSz" secondAttribute="trailing" constant="10" id="nqs-ki-flK"/>
-                                            <constraint firstAttribute="trailingMargin" secondItem="gYw-Zv-e07" secondAttribute="trailing" id="oFH-Tk-whV"/>
-                                            <constraint firstAttribute="trailingMargin" secondItem="8AN-5X-QLW" secondAttribute="trailing" id="yBR-mA-d7n"/>
+                                            <constraint firstItem="gYw-Zv-e07" firstAttribute="trailing" secondItem="HeU-vL-Boz" secondAttribute="trailingMargin" id="oFH-Tk-whV"/>
+                                            <constraint firstItem="K32-D6-VSz" firstAttribute="top" secondItem="HeU-vL-Boz" secondAttribute="top" id="rAk-AL-xuV"/>
+                                            <constraint firstItem="8AN-5X-QLW" firstAttribute="trailing" secondItem="HeU-vL-Boz" secondAttribute="trailingMargin" id="yBR-mA-d7n"/>
                                         </constraints>
                                         <connections>
                                             <outlet property="artistName" destination="gYw-Zv-e07" id="fqs-wd-Uy9"/>
